desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
/* ... */
.app-notification button:hover,
.app-notification.frame button:hover,
.app-notification .button:hover,
.app-notification.frame .button:hover {
    color: white;
    border-color: rgba(0, 0, 0, 0.7);
    background-image: linear-gradient(to bottom,
                                      rgba(79, 119, 158, 0.7));
    background-clip: padding-box;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0.1);
    text-shadow: none;
    -gtk-icon-shadow: 0 1px black;
    outline-color: rgba(238, 238, 236, 0.3);
    border-radius: 3px;
}

.app-notification button:active,
.app-notification button:checked,
.app-notification button:backdrop:active,
.app-notification button:backdrop:checked,
.app-notification.frame button:active,
.app-notification.frame button:checked,
.app-notification.frame button:backdrop:active,
.app-notification.frame button:backdrop:checked,
.app-notification .button:active,
.app-notification .button:checked,
.app-notification .button:backdrop:active,
.app-notification .button:backdrop:checked,
.app-notification.frame .button:active,
.app-notification.frame .button:checked,
.app-notification.frame .button:backdrop:active,
.app-notification.frame .button:backdrop:checked {
    color: white;
    border-color: rgba(0, 0, 0, 0.7);
    background-image: linear-gradient(to bottom,
                                      rgba(65, 106, 175, 0.7));
    background-clip: padding-box;
    box-shadow: none;
    text-shadow: none;
    -gtk-icon-shadow: none;
    outline-color: rgba(238, 238, 236, 0.3);
    border-radius: 3px;
}

.app-notification button:disabled,
.app-notification button:backdrop:disabled,
.app-notification.frame button:disabled,
.app-notification.frame button:backdrop:disabled,
.app-notification .button:disabled,
.app-notification .button:backdrop:disabled,
.app-notification.frame .button:disabled,
.app-notification.frame .button:backdrop:disabled {
    color: #878989;
    border-color: rgba(0, 0, 0, 0.7);
    background-image: linear-gradient(to bottom,
                                      rgba(52, 57, 57, 0.5));
    background-clip: padding-box;
    box-shadow: none;
    text-shadow: none;
    -gtk-icon-shadow: none;
    border-radius: 3px;
    padding: 0px;
}

.app-notification button:backdrop,
.app-notification.frame button:backdrop,
.app-notification .button:backdrop,
.app-notification.frame .button:backdrop {
    color: #eeeeec;
    border-color: rgba(0, 0, 0, 0.7);
    background-image: linear-gradient(to bottom,
                                      rgba(102, 153, 204, 0.7));
    background-clip: padding-box;
    box-shadow: none;
    text-shadow: none;
    -gtk-icon-shadow: none;
    border-radius: 3px;
    padding: 0px;
}

/*************
 * Expanders *
 *************/
treeview.view expander,
GtkTreeView.view.expander {
	-gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
	color: @theme_fg_color;
}

treeview.view expander:dir(rtl),
GtkTreeView.view.expander:dir(rtl) {
	-gtk-icon-source: -gtk-icontheme("pan-end-symbolic-rtl"); 
}

treeview.view expander:hover,
GtkTreeView.view.expander:hover {
	color: @theme_fg_color;
}

treeview.view expander:selected,
GtkTreeView.view.expander:selected {
	color: @theme_selected_fg_color;
}

treeview.view expander:selected:hover,
GtkTreeView.view.expander:selected:hover {
	color: @theme_selected_fg_color;
}

treeview.view expander:checked,
GtkTreeView.view.expander:checked {
	-gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
}

expander arrow,
GtkExpander {
    -gtk-icon-style: regular;
	-gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
}

expander arrow:dir(rtl),
GtkExpander:dir(rtl) {
	-gtk-icon-source: -gtk-icontheme("pan-end-symbolic-rtl");
}

expander arrow:hover,
GtkExpander:hover {
	color: @internal_element_color;
}

expander arrow:checked,
GtkExpander:checked {
	-gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
}

expander,
.expander {
	color: @theme_fg_color;
	border-color: @theme_fg_color;
}

expander:active,
.expander:active {
	color: @theme_fg_color;
	border-color: @theme_fg_color;
}

expander:hover,
.expander:hover {
	color: @internal_element_color;
	border-color: @internal_element_color;
}

expander row:selected,
expander row:selected:focus,
.expander row:selected,
.expander row:selected:focus {
	color: @expander_row_selected_color;
	border-color: @expander_row_selected_color;
	border-width: 0;
	background-color: transparent;
	background-image: none;
	border-image: none;
	box-shadow: none;
}

expander row:selected:hover,
expander row:selected:focus:hover,
.expander row:selected:hover,
.expander row:selected:focus:hover {
	color: @theme_selected_fg_color;
	border-color: @theme_selected_fg_color;
}

/**************
 * List boxes *
 **************/

list,
.list {
	background-color: @list_box_bg;
}

list row,
.list-row {
    padding: 2px;
    transition: all 200ms ease-in;
	background-image: none;
	background-color: @theme_base_color;
}

list row:hover,
.list-row:hover {
	background-image: none;
	background-color: shade (@theme_selected_bg_color, 1.55);
	color: shade (@theme_selected_bg_color, 0.35);
}

list row:selected,
list row:selected:hover,
.list-row:selected,
.list-row:selected:hover {
	border-width: 0;
	border-style: solid;
	border-color: shade (@theme_selected_bg_color, 0.85);
	background-color: @theme_selected_bg_color;
	background-image: linear-gradient(to bottom,
		shade (@theme_selected_bg_color, 1.0),
		shade (@theme_selected_bg_color, 0.85));
	box-shadow: none;
	color: @theme_selected_fg_color;
}

list row:selected:backdrop,
list row:selected:backdrop:hover,
.list-row:selected:backdrop,
.list-row:selected:backdrop:hover {
	border-width: 0;
	border-style: solid;
	border-color: shade (@theme_bg_color, 0.85);
	background-image: linear-gradient(to bottom,
		shade (@theme_selected_bg_color, 0.94),
		shade (@theme_selected_bg_color, 0.94));
	color: @theme_fg_color;
	text-shadow: none;
	box-shadow: none;
}
/* ... */

